exports/default/networking.k8s.io.Ingress.ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-app
  namespace: default
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: nodeapp-service
            port:
              number: 5000
        path: /
        pathType: Prefix
